fixed header alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,19 @@
 .header {
-    height: 8em;
-    max-width: 1100px;
-    width: 95%;
-    margin: 0 auto;
-    justify-content: space-between;
-    /* position: fixed; */
+  height: 8em;
+  max-width: 1100px;
+  width: 95%;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  /* position: fixed; */
+}
+
+.header a.link {
+  text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .header {
+    height: 6em;
   }
-  
-  @media (max-width: 600px) {
-    .header {
-      height: 6em;
-    }
-  }
+}
